2005-04-04  Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/component/addressbook.c (load_source_auth_cb)
         (addressbook_authenticate) : get the uri from Ebook
       instead of Esource. e_source_get_uri returns NULL when
       it does not have a reference to source group with it
       which happens when the source list from which this source
       was taken is destroyed but Ebook has reference to that source.
       e_book_get_uri returns the same uri and it will be always present
       Fixes #73330

2005-04-03  Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/widgets/eab-gui-util.c (do_copy) :
       use eab_merging_book_add_contact instead of
       e_book_async_add_contact to take care of duplicate
       checking
       Fixes #74255

2005-03-03   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/component/addressbook.c (load_source_auth_cb):
	Make sure LoadSourceData has call back installed
	before calling it. cb is NULL when called from 
	auth_required_cb 
	Fixes #73206 
	
2005-02-26   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/widgets/e-addressbook-view.c :
	Change the e-popup item type for "Cut"
	from E_POPUP_BAR to E_POPUP_ITEM
	
	Fixes #73013

2005-02-25   Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/conact-editor/eab-editor.c 
	(eab_editor_prompt_to_save_changes) : Just close 
	the editor when user presees cancel or closes the editor
	when there are no changes. Seems to be broken 
	by earlier Change for #70371

	Fixes #73005
	 

2005-02-24  Sushma Rai  <rsushma@novell.com>

	* gui/component/addressbook-config.c (addressbook_config_edit_source):
	Removed the hack, setting absolute URI to NULL. Fixes #72715

2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* gui/component/addressbook-view.c:
	* gui/component/addressbook.c: Include
	<libedataserverui/e-passwords.h>.

2005-02-19  Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/contact-editor/eab-editor.c